# XishunBot_For_QQ

./: Dockerfile  Python-3.9.6.tgz  README.md  a.sh  config.py  liu1.amr  liu2.amr  liu3.amr  liu4.amr  liu5.amr  main.py  pyproject.toml
src/plugins/admin/: __init__.py
src/plugins/announce/: __init__.py  get_groups.py
src/plugins/arknights_gacha/: __init__.py  arknights_gacha.py  gacha.py
src/plugins/auto_approve/: __init__.py
src/plugins/codeforce/: DB_Manage.py  __init__.py  get_now_grade.py
src/plugins/eat_what/: DB_Manage.py  __init__.py
src/plugins/jwxt/: DB_Manage.py  __init__.py  class_update_to_sql.py  get_kb.py  get_week.py  login.py
src/plugins/liu/: DB_Manage.py  __init__.py  dao.py  liu2.py  remote.cmd  向轮椅奔去.m4s
src/plugins/lolhr/: __init__.py
src/plugins/menu/: __init__.py
src/plugins/nonebot_plugin_simplemusic/: __init__.py  data_source.py
src/plugins/query_elc/: DB_Manage.py  __init__.py  choose_building.py  choose_room.py  query_elc.py
src/plugins/query_elc/database/: DB_Manage.py
src/plugins/query_elc/elc/: get_elc.py
src/plugins/query_elc/login/: campus.py  login.py
src/plugins/query_yiqing/: DB_Manage.py  __init__.py  get_info.py
src/plugins/schedulers/: __init__.py
src/plugins/schedulers/wmxy/: config.py  (+1 more)
src/plugins/send_msg_eve/: __init__.py
src/plugins/speak/: DB_Manage.py  __init__.py  baidu.py  translate.py
src/plugins/translate_switch/: DB_Manage.py  __init__.py
src/plugins/weather/: DB_Manage.py  __init__.py  get_weather.py
src/plugins/xishun/: __init__.py  xishun.py
src/plugins/yy/: __init__.py
(+4 files in other folders)
